--- a/config.rb.example
+++ b/config.rb.example
@@ -30,18 +30,17 @@ end
 activate :sprockets
 activate :livereload
 
-activate :autoprefixer do |config|
-  config.browsers = ['last 2 version', 'Firefox ESR']
-  config.cascade  = false
-  config.inline   = true
-end
-
 # Github pages require relative links
 activate :relative_assets
 set :relative_links, true
 
 # Build Configuration
 configure :build do
+  activate :autoprefixer do |config|
+    config.browsers = ['last 2 version', 'Firefox ESR']
+    config.cascade  = false
+    config.inline   = true
+  end
   # We do want to hash woff and woff2 as there's a bug where woff2 will use
   # woff asset hash which breaks things. Trying to use a combination of ignore and
   # rewrite_ignore does not work as it conflicts weirdly with relative_assets. Disabling
@@ -58,6 +57,7 @@ end
 # Deploy Configuration
 # If you want Middleman to listen on a different port, you can set that below
 set :port, 4567
+set :server_name, '0.0.0.0'
 
 helpers do
   require './lib/toc_data.rb'
